--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ matrix:
         apt:
           packages:
             - g++-5
-            - unzip
           sources: &sources
             - r-packages-precise
             - ubuntu-toolchain-r-test
@@ -23,21 +22,20 @@ matrix:
         apt:
           packages:
             - g++-6
-            - unzip
           sources: *sources
-    - env: CXX=clang++-3.8 CC=clang-3.8
+    - env: CXX="clang++-3.8 -stdlib=libc++" CC=clang-3.8
       addons:
         apt:
           packages:
             - clang-3.8
-            - unzip
+            - libc++-dev
           sources: *sources
-    - env: CXX=clang++-3.9 CC=clang-3.9
+    - env: CXX="clang++-3.9 -stdlib=libc++" CC=clang-3.9
       addons:
         apt:
           packages:
             - clang-3.9
-            - unzip
+            - libc++-dev
           sources: *sources
 
 install:
